# yadata2

./: .gitignore  README.md  sp500.csv  stack.yaml  yadata2.cabal
src/: Main.hs
src/Yadata2/: LibAPI.hs  LibYahoo.hs
